[package]
name = "sql_query"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "tls-native-tls", "runtime-tokio", "chrono", "uuid", "rust_decimal"] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
sql_query_derive = { path = "sql_query_derive" }
ts-rs = { version = "12.0", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
redis = { version = "1.2", features = ["tokio-comp", "aio"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
smallvec = "1.15.1"
itoa = "1.0.18"
tracing = "0.1"

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.test]
opt-level = 3

[profile.test.build-override]
opt-level = 3
